--- a/index.html
+++ b/index.html
@@ -10,28 +10,32 @@
 <body>
   <header>
     <nav>
-      <h1>Learning HTML, CSS, and JS</h1>
-      <h2 style="color: darkblue; background-color: yellow">Sub heading level 2</h2>
-      <h3>Sub heading level 3</h3>
+      <h1>Reading Notes</h1>
+      <h2 style="color: darkblue; background-color: yellow">Code 201</h2>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about_Us.html">About us</a></li>
-        <li><a href="class-01.md">Day 1 Notes/reading assignment</a></li>
-        <li><a href="class-02.md">Day 2 notes/reading assignment</a></li>
-        <li><a href="class-03.md">Day 3 notes/reading assignment</a></li>
-        <li><a href="class-04.md">Day 4 notes/reading assignment</a></li>
-        <li><a href="class-05.md">Day 5 notes/reading assignment</a></li>
-        <li><a href="class-06.md">Day 6 notes/reading assignment</a></li>
-        <li><a href="class-07.md">Day 7 notes/reading assignment</a></li>
-        <li><a href="class-08.md">Day 8 notes/reading assignment</a></li>
-        <li><a href="class-09.md">Day 9 notes/reading assignment</a></li>
-        <li><a href="class-10.md">Day 10 notes/reading assignment</a></li>
-        <li><a href="class-11.md">Day 11 notes/reading assignment</a></li>
-        <li><a href="class-12.md">Day 12 notes/reading assignment</a></li>
-        <li><a href="class-13.md">Day 13 notes/reading assignment</a></li>
-        <li><a href="class-14.md">Day 14 notes/reading assignment</a></li>
-        <li><a href="class-15a.md">Day 15 notes/reading assignment</a></li>
-        <li><a href="class-15b.md">Day 14b notes/reading assignment</a></li>
+        <li><a href="code201/class-01.md">Day 1 Notes/reading assignment</a></li>
+        <li><a href="code201/class-02.md">Day 2 notes/reading assignment</a></li>
+        <li><a href="code201/class-03.md">Day 3 notes/reading assignment</a></li>
+        <li><a href="code201/class-04.md">Day 4 notes/reading assignment</a></li>
+        <li><a href="code201/class-05.md">Day 5 notes/reading assignment</a></li>
+        <li><a href="code201/class-06.md">Day 6 notes/reading assignment</a></li>
+        <li><a href="code201/class-07.md">Day 7 notes/reading assignment</a></li>
+        <li><a href="code201/class-08.md">Day 8 notes/reading assignment</a></li>
+        <li><a href="code201/class-09.md">Day 9 notes/reading assignment</a></li>
+        <li><a href="code201/class-10.md">Day 10 notes/reading assignment</a></li>
+        <li><a href="code201/class-11.md">Day 11 notes/reading assignment</a></li>
+        <li><a href="code201/class-12.md">Day 12 notes/reading assignment</a></li>
+        <li><a href="code201/class-13.md">Day 13 notes/reading assignment</a></li>
+        <li><a href="code201/class-14.md">Day 14 notes/reading assignment</a></li>
+        <li><a href="code201/class-15a.md">Day 15 notes/reading assignment</a></li>
+        <li><a href="code201/class-15b.md">Day 14b notes/reading assignment</a></li>
+      </ul>
+    <h2 style="color: beige; background-color: grey"></h2>
+      <ul>
+        <li><a href="code301/class-01.md">Day 1 reading notes</a></li>
+        <li><a href="code301/class-02.md">Day 2 reading notes</a></li>
       </ul>
     </nav>
   </header>
