forgot to add the label to an h2 tag

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li><a href="code201/class-15a.md">Day 15 notes/reading assignment</a></li>
         <li><a href="code201/class-15b.md">Day 14b notes/reading assignment</a></li>
       </ul>
-    <h2 style="color: beige; background-color: grey"></h2>
+    <h2 style="color: beige; background-color: grey">Code 301</h2>
       <ul>
         <li><a href="code301/class-01.md">Day 1 reading notes</a></li>
         <li><a href="code301/class-02.md">Day 2 reading notes</a></li>
