--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="code301/class-01.md">Day 1 reading notes</a></li>
         <li><a href="code301/class-02.md">Day 2 reading notes</a></li>
         <li><a href="code301/class-03.md">Day 3 reading notes</a></li>
+        <li><a href="code301/class-04.md">Day 4 reading notes</a></li>
       </ul>
     </nav>
   </header>
