forgot to add html link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li><a href="code301/class-02.md">Day 2 reading notes</a></li>
         <li><a href="code301/class-03.md">Day 3 reading notes</a></li>
         <li><a href="code301/class-04.md">Day 4 reading notes</a></li>
+        <li><a href="code301/class-05.md">Day 5 reading notes</a></li>
       </ul>
     </nav>
   </header>
