--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <li><a href="code301/class-04.md">Day 4 reading notes</a></li>
         <li><a href="code301/class-05.md">Day 5 reading notes</a></li>
         <li><a href="code301/class-06.md">Day 6 reading notes</a></li>
+        <li><a href="code301/class-07.md">Day 7 reading notes</a></li>
       </ul>
     </nav>
   </header>
