class 8 notes added

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <li><a href="code301/class-05.md">Day 5 reading notes</a></li>
         <li><a href="code301/class-06.md">Day 6 reading notes</a></li>
         <li><a href="code301/class-07.md">Day 7 reading notes</a></li>
+        <li><a href="code301/class-08.md">Day 8 reading notes</a></li>
       </ul>
     </nav>
   </header>
