--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <li><a href="code301/class-06.md">Day 6 reading notes</a></li>
         <li><a href="code301/class-07.md">Day 7 reading notes</a></li>
         <li><a href="code301/class-08.md">Day 8 reading notes</a></li>
+        <li><a href="code301/class-09.md">Day 9 reading notes</a></li>
       </ul>
     </nav>
   </header>
