--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <li><a href="code301/class-08.md">Day 8 reading notes</a></li>
         <li><a href="code301/class-09.md">Day 9 reading notes</a></li>
         <li><a href="code301/class-10.md">Day 10 reading notes</a></li>
+        <li><a href="code301/class-11.md">Day 11 reading notes</a></li>
       </ul>
     </nav>
   </header>
