--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li><a href="code301/class-11.md">Day 11 reading notes</a></li>
         <li><a href="code301/class-12.md">Day 12 reading notes</a></li>
         <li><a href="code301/class-13.md">Day 13 reading notes</a></li>
+        <li><a href="code301/class-14.md">Day 14 reading notes</a></li>
       </ul>
     </nav>
   </header>
