--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <li><a href="code301/class-12.md">Day 12 reading notes</a></li>
         <li><a href="code301/class-13.md">Day 13 reading notes</a></li>
         <li><a href="code301/class-14.md">Day 14 reading notes</a></li>
+        <li><a href="code301/class-15.md">Day 15 reading notes</a></li>
       </ul>
     </nav>
   </header>
