--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
         <li><a href="code301/class-14.md">Day 14 reading notes</a></li>
         <li><a href="code301/class-15.md">Day 15 reading notes</a></li>
       </ul>
+      <h2 style="color: beige; background-color:pink">Code 401</h2>
+      <ul>
+        <li><a href="code401/class-01.md">Day 1 reading notes</a></li>
+
+      </ul>
     </nav>
   </header>
 
