--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <h2 style="color: beige; background-color:pink">Code 401</h2>
       <ul>
         <li><a href="code401/class-01.md">Day 1 reading notes</a></li>
+        <li><a href="code401/class-02.md">Day 2 reading notes</a></li>
 
       </ul>
     </nav>
